--- a/HTML.CSS/LumoBite/index.html
+++ b/HTML.CSS/LumoBite/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LumoBite - Healthy Snacks That Keep You Glowing</title>
+    <title>
+      LumoBite - <strong>Healthy Snacks</strong> That Keep You Glowing
+    </title>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
