--- a/JS/Homework-3/GalacticLedger/index.html
+++ b/JS/Homework-3/GalacticLedger/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Galactic Bank System</title>
   </head>
   <body>
-    <script src="script.js"></script>
+    <h1>🌌 Galactic Bank System</h1>
+    <p>Open the console (F12) to see the results!</p>
+
+    <script src="main.js"></script>
   </body>
 </html>
